final commit message for the initial commit of the project, including all the added files and changes to README.md.
